--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Bonjour</title>
+    <style>
+        body{
+            font-size: 20px;
+            color: blue;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     Bonjour tout le monde
