--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bonjour</title>
-    <style>
-        body{
-            font-size: 20px;
-            color: blue;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     Bonjour tout le monde
