--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     Bonjour tout le monde
 
     <h1>Ceci est mon code html</h1>
+
+    <h2>TEST TEST</h2>
+    <h2>TEST TEST</h2>
+    <h2>TEST TEST</h2>
 </body>
 </html>
